# lamp

01_01-py1/: pyproject.toml  t01.py  t01_2.py  t01_test.py  t02.py  t02_2.py  t02_3.py  t03.py  t03_2.py  t03_3.py  t04.py  t04_2.py  t04_3.py  t05.py  t05_2.py  t05_3.py  t06.py  t06_2.py  t06_3.py  t07.py  t07_2.py  t07_3.py  t08.py  t08_2.py  t08_3.py  t09.py  t09_2.py  t09_3.py  t10.py  t10_2.py  t10_3.py  t11.py  t11_2.py  t11_3.py  t12.py  t12_3.py
01_02-cc1/: 03.md  08.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md
01_02-lucid-code/: 02.md  03.md  05.md  06.md  07.md  08.md  09.md
